# TCC-Glauber

./: README.md
gazebo_worlds/: CMakeLists.txt  package.xml
gazebo_worlds/launch/: gzserver.launch.py  world0.launch.py
gazebo_worlds/urdf/: herbie.gazebo
gazebo_worlds/worlds/: gazebo_ros_state.world
mpc/: package.xml  setup.cfg  setup.py
mpc/mpc/: controller.py
mpc/src/: controller.py
mpc_orca/launch/: start_controllers.launch
mpc_orca/src/: controller.py  test_controller.py
