<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>MPC</name>
  <version>0.0.1</version>
  <description>Model Predctive Controller</description>
  <maintainer email="grl@ic.ufal.br">Glauber Rodrigues Leite</maintainer>
  <maintainer email="borgesjvt@gmail.com">João Victor Torres Borges</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>